--- a/biobase.API/biobase.API.csproj
+++ b/biobase.API/biobase.API.csproj
@@ -21,6 +21,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.1" />
+	<None Include="wwwroot\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="wwwroot\favicon.png" />
   </ItemGroup>
 
 </Project>
